remove compressible for adding content first

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.collapsible {
+/* .collapsible {
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -19,4 +19,4 @@
 
 .active, .collapsible:hover {
 background-color: #ccc;
-}
+} */
