--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 /* Body Styling */
 body {
-  background-color: #2c2c54; /* Bluish-black background */
+  background-color: #020f18; /* Bluish-black background */
   color: #f5f5f5;
   line-height: 1.8;
   font-size: 16px;
